--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "webpack": "^4.36.1"
   },
   "dependencies": {
-    "mini-css-extract-plugin": "^0.8.0"
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0"
   }
 }
